@@ -1,6 +1,3 @@
-* JSON requests / parsing support - (JSONC is a C library for JSON ) [request by  4ndreaSt4gi  (Andrea Stagi) ]
-
-
 * Code documentation
 
 * New Functions
