@@ -7,3 +7,6 @@
  	
  * Favorites list
  	-	 Request Favorites list
+ 	
+[2012-12-07]
+* JSON requests / parsing support - (JSONC is a C library for JSON )
